--- a/MAIN_IMPORTANT_PRACTICE/CreateAndChangeStudent.axaml
+++ b/MAIN_IMPORTANT_PRACTICE/CreateAndChangeStudent.axaml
@@ -11,7 +11,6 @@
                    HorizontalAlignment="Center" 
                    Margin="0 0 0 0"/>
 
-        <!-- Поле посередине -->
         <StackPanel Margin="0 0" HorizontalAlignment="Center">
             <TextBlock Text="РегНомер:" 
                        HorizontalAlignment="Center" 
@@ -24,20 +23,24 @@
         </StackPanel>
 
         <Grid Margin="0 10" ColumnDefinitions="*,*" HorizontalAlignment="Center">
-            <!-- Первая колонка -->
             <StackPanel Grid.Column="0" Margin="0 0 20 0">
                 <Grid RowDefinitions="Auto,Auto,Auto,Auto">
                     <TextBlock Grid.Row="0" 
-                               Text="Номер:" 
+                               Text="Специальность:" 
                                HorizontalAlignment="Center" 
                                Margin="0 0 0 0"/>
-                    <TextBox x:Name="NumberTextBox" 
-                             Text="{Binding Номер}" 
-                             Grid.Row="1" 
-                             Width="300" 
-                             HorizontalAlignment="Center"
-                             Margin="0 0 0 10"
-                             MaxLength="20"/>
+                    <ComboBox x:Name="SpecialityComboBox" 
+                              Grid.Row="1" 
+                              Width="300" 
+                              HorizontalAlignment="Center" 
+                              SelectedItem="{Binding НомерNavigation}"
+                              Margin="0 0 0 10">
+                        <ComboBox.ItemTemplate>
+                            <DataTemplate>
+                                <TextBlock Text="{Binding Направление}"/>
+                            </DataTemplate>
+                        </ComboBox.ItemTemplate>
+                    </ComboBox>
                     
                     <TextBlock Grid.Row="2" 
                                Text="Пароль:" 
@@ -52,7 +55,6 @@
                 </Grid>
             </StackPanel>
 
-            <!-- Вторая колонка -->
             <StackPanel Grid.Column="1" Margin="20 0 0 0">
                 <Grid RowDefinitions="Auto,Auto,Auto,Auto">
                     <TextBlock Grid.Row="0" 
@@ -86,7 +88,8 @@
                     Margin="0 0 20 0" 
                     Content="Удалить" 
                     FontSize="30" 
-                    Width="140"/>
+                    Width="140"
+                    Click="DeleteButton_Click"/>
             <Button x:Name="SaveButton" 
                     Content="Сохранить" 
                     FontSize="30" 
