--- a/MAIN_IMPORTANT_PRACTICE/SeeDisciplines.axaml
+++ b/MAIN_IMPORTANT_PRACTICE/SeeDisciplines.axaml
@@ -3,9 +3,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="MAIN_IMPORTANT_PRACTICE.DisciplinesControl_AdminAndDepartment">
-
-    <Grid RowDefinitions="Auto,*,Auto">
+             x:Class="MAIN_IMPORTANT_PRACTICE.SeeDisciplines">
+     <Grid RowDefinitions="Auto,*,Auto">
         <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="10" HorizontalAlignment="Right">
             <TextBox x:Name="FilterTextBox" 
                      Width="200" 
@@ -14,7 +13,7 @@
                      MaxLength="50"/>
         </StackPanel>
 
-        <DataGrid Name="DisciplineControlDataGrid" Grid.Row="1" IsReadOnly="True" DoubleTapped="DisciplineControlDataGrid_DoubleTapped">
+        <DataGrid Name="DisciplineControlDataGrid" Grid.Row="1" IsReadOnly="True">
             <DataGrid.Columns>
                 <DataGridTextColumn Binding="{Binding Код}" Header="Код"/>
                 <DataGridTextColumn Binding="{Binding Объем}" Header="Объём"/>
@@ -24,10 +23,7 @@
         </DataGrid>
 
         <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="10" HorizontalAlignment="Right">
-            <Button x:Name="AddButton" 
-                    Content="Добавить" 
-                    Width="83" 
-                    Height="30" Click="AddButton_Click"/>
         </StackPanel>
     </Grid>
+
 </UserControl>
