--- a/MAIN_IMPORTANT_PRACTICE/SeeExams.axaml
+++ b/MAIN_IMPORTANT_PRACTICE/SeeExams.axaml
@@ -3,8 +3,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="MAIN_IMPORTANT_PRACTICE.ExamsControl_CRUD_">
-    <Grid RowDefinitions="Auto,*,Auto">
+             x:Class="MAIN_IMPORTANT_PRACTICE.SeeExams">
+
+<Grid RowDefinitions="Auto,*,Auto">
         <StackPanel Grid.Row="0" Orientation="Horizontal" Margin="10" HorizontalAlignment="Right">
             <TextBox x:Name="FilterTextBox" 
                      Width="200"
@@ -13,7 +14,7 @@
                      MaxLength="1"/>
         </StackPanel>
 
-        <DataGrid Name="ExamControlDataGrid" Grid.Row="1" IsReadOnly="True" DoubleTapped="ExamControlDataGrid_DoubleTapped">
+        <DataGrid Name="ExamControlDataGrid" Grid.Row="1" IsReadOnly="True">
             <DataGrid.Columns>
                 <DataGridTextColumn Binding="{Binding Дата}" Header="Дата"/>
                 <DataGridTextColumn Binding="{Binding КодNavigation.Название}" Header="Дисциплина"/>
@@ -25,12 +26,6 @@
         </DataGrid>
 
         <StackPanel Grid.Row="2" Orientation="Horizontal" Margin="10" HorizontalAlignment="Right">
-            <Button x:Name="AddButton" 
-                    Content="Добавить" 
-                    Width="83" 
-                    Height="30"
-                    Click="AddButton_Click"/>
         </StackPanel>
     </Grid>
-
 </UserControl>
